<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary"
        tools:context=".presentation.create_transaction.CreateTransactionActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/tbCreateTransaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="New PeerShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:fontFamily="@font/proxima_nova_bold" android:textSize="18sp"
                    android:textColor="#000000"/>
            <TextView
                    android:id="@+id/tvCancel"
                    android:text="@string/create_transaction_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    style="@style/CreateTransactionCancelStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>
    <TextView
            android:id="@+id/tvPeersTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_transaction_peers"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            style="@style/CreateTransactionTitleStyle"
            app:layout_constraintTop_toBottomOf="@+id/tbCreateTransaction"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:id="@+id/ivAddMember"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_add_circle"
            app:layout_constraintStart_toEndOf="@+id/tvPeersTitle"
            app:layout_constraintTop_toTopOf="@+id/tvPeersTitle"
            app:layout_constraintBottom_toBottomOf="@+id/tvPeersTitle" android:layout_marginStart="16dp"/>

    <android.support.v4.widget.NestedScrollView
            android:id="@+id/nsvMember"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPeersTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivAddByContact">

        <com.example.prutc.peershare.widget.MemberViewGroup
                android:id="@+id/vMemberViewGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.v4.widget.NestedScrollView>


    <ImageView
            android:id="@+id/ivAddByContact"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_contact"
            app:layout_constraintTop_toTopOf="@+id/nsvMember"
            app:layout_constraintBottom_toBottomOf="@+id/nsvMember"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tvBillNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            style="@style/CreateTransactionTitleStyle"
            android:text="@string/create_transaction_bill_name_title"
            app:layout_constraintTop_toBottomOf="@+id/nsvMember"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:id="@+id/etBillName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/create_transaction_bill_name_hint"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_text_box"
            app:layout_constraintTop_toBottomOf="@+id/tvBillNameTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/tvBillTotalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            style="@style/CreateTransactionTitleStyle"
            android:text="@string/create_transaction_bill_total_title"
            app:layout_constraintTop_toBottomOf="@+id/etBillName"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:id="@+id/etBillTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/create_transaction_bill_total_hint"
            android:padding="8dp"
            android:background="@drawable/bg_text_box"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvBillTotalTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
            android:id="@+id/rgBillSplit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etBillTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <RadioButton
                android:id="@+id/rbSplitEqually"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:button="@null"
                style="@style/CreateTransactionSelectorStyle"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/create_transaction_split_equally"/>

        <RadioButton
                android:id="@+id/rbSplitByItem"
                style="@style/CreateTransactionSelectorStyle"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:button="@null"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/create_transaction_split_by_item"/>

    </RadioGroup>

    <android.support.v7.widget.CardView
            android:id="@+id/cvNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:contentPadding="14dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/primary"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/tvNextTitle"
                style="@style/CreateTransactionNextStyle"
                android:text="@string/create_transaction_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>