<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.enter_bill_item.EnterBillItemActivity">

    <TextView
            android:id="@+id/tvPriceTitle"
            android:text="@string/enter_bill_price_title"
            style="@style/EnterBillTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    <TextView
            android:id="@+id/tvPrice"
            android:text="@string/enter_bill_shared_by_title"
            style="@style/EnterBillTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPrice"/>
    <TextView
            android:id="@+id/tvTagTitle"
            android:text="@string/enter_bill_tag_title"
            style="@style/EnterBillTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgMember"/>

    <EditText
            android:id="@+id/etPrice"
            style="@style/EnterBillPriceStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPriceTitle"
            app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
            android:id="@+id/rgMember"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
            app:layout_constraintStart_toStartOf="parent"/>


    <android.support.v7.widget.CardView
            android:id="@+id/cvAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:contentPadding="14dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/primary"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:id="@+id/tvAddTitle"
                style="@style/EnterBillAddStyle"
                android:text="@string/enter_bill_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>