<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".presentation.create_transaction.EditContactDialogFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/tvEnterContactDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_contact_enter_contact_detail_title"
                style="@style/EnterContactEnterContactTitleStyle"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
                android:id="@+id/ivCancel"
                android:layout_width="30dp"
                android:layout_height="30dp"
                tools:src="@tools:sample/avatars"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_cancel"/>

        <TextView
                android:id="@+id/tvNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_contact_name_title"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                style="@style/EnterContactTitleStyle"
                app:layout_constraintTop_toBottomOf="@+id/tvEnterContactDetailTitle"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/tvPromptPayTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_contact_prompt_pay_title"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                style="@style/EnterContactTitleStyle"
                app:layout_constraintTop_toBottomOf="@+id/etName"
                app:layout_constraintStart_toStartOf="parent"/>

        <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:hint="@string/enter_contact_name_hint"
                style="@style/EnterContactNameStyle"
                app:layout_constraintTop_toBottomOf="@+id/tvNameTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
                android:id="@+id/etPromptPay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:hint="@string/enter_contact_prompt_pay_hint"
                style="@style/EnterContactPromptPayStyle"
                app:layout_constraintTop_toBottomOf="@+id/tvPromptPayTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.v7.widget.CardView
                android:id="@+id/cvCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:contentPadding="14dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/secondary"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/etPromptPay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            <TextView
                    android:id="@+id/tvCashTitle"
                    style="@style/EnterContactCashStyle"
                    android:text="@string/enter_contact_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:id="@+id/cvDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                app:cardCornerRadius="8dp"
                app:contentPadding="14dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/forthary"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cvCash">

            <TextView
                    android:id="@+id/tvDelete"
                    style="@style/EnterContactAddStyle"
                    android:text="Delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:id="@+id/cvSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                app:cardCornerRadius="8dp"
                app:contentPadding="14dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cvDelete">

            <TextView
                    android:id="@+id/tvSave"
                    style="@style/EnterContactAddStyle"
                    android:text="Save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>