<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary"
        tools:context=".presentation.transaction.TransactionActivity">

    <android.support.v7.widget.CardView
            android:id="@+id/cvCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:contentPadding="84dp"
            app:cardBackgroundColor="@color/sixthary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfile">

        <TextView
                android:id="@+id/tvCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TransactionNewPeerShareStyle"
                android:text="@string/transactionNewPeerShare"/>

    </android.support.v7.widget.CardView>

    <TextView
            android:id="@+id/tvRecentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactionRecentTitle"
            style="@style/TransactionRecentTitleStyle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cvCreate"
            app:layout_constraintStart_toStartOf="parent"/>

    <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/srRecent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvRecentTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rvRecent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"/>
    <TextView
            android:id="@+id/tvPeerShareTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactionTitle"
            style="@style/TransactionTitleStyle"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
            app:layout_constraintTop_toTopOf="@+id/ivProfile"/>


</android.support.constraint.ConstraintLayout>